Fix slideshow positioning and overflow

--- a/_assets/sass/_images.sass
+++ b/_assets/sass/_images.sass
@@ -80,6 +80,20 @@
       margin-right: $paddingMin
 
   &--slideshow
+    left: 50%
+    margin: #{$baseline * 2} 0
+    overflow: hidden
+    padding: 0 1.5em
+    position: relative
+    transform: translateX(-50%)
+    width: 100vw
+
+    @media (min-width: 42em)
+      padding: 0 calc(50vw - 50% - 1.5em)
+
+    @media (min-width: 80em)
+      padding: 0 calc(50vw - 50% - 4.5em)
+
     .image__caption
       max-width: calc(100% - #{$baseline * 4})
 
@@ -127,17 +141,9 @@
       width: 100%
 
 .slideshow
-  // margin-left: 1.5em
-  // max-width: 32em
   overflow: visible
   position: relative
   width: 100%
-
-  // @media (min-width: 42em)
-  //   margin-left: between(1.5em, 6em, 42em, 80em)
-
-  // @media (min-width: 80em)
-  //   margin-left: 6em
 
   &__slides
     display: flex
@@ -197,12 +203,3 @@ picture
   > source,
   > img
     width: 100%
-
-// img,
-// source
-//   transform: translateZ(0)
-//   transition: filter .5s
-
-//   &[data-src],
-//   &[data-srcset]
-//     filter: blur(20px)
