--- a/_assets/sass/pages/_study.sass
+++ b/_assets/sass/pages/_study.sass
@@ -140,8 +140,6 @@
       padding: 4.5em 4.5em 0
 
   &__section
-    overflow: hidden
-
     .study__icons,
     .study__title
       opacity: 1
